--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
 		
 		<section id="photos">
 			<div class="wrapLampCase">
-				<div class="photoI"><img src="img/lampCase/1_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/2_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/3_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/4_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/5_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/6_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/7_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/8_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/9_s.jpg"></div>
-				<div class="photoI"><img src="img/lampCase/10_s.jpg"></div>			
+				<div class="photoI" id="gig"><img src="img/lampCase/1_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/2_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/3_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/4_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/5_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/6_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/7_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/8_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/9_s.jpg"></div>
+				<div class="photoI" id="gig"><img src="img/lampCase/10_s.jpg"></div>			
 			</div>
 
 		</section>
